# gitmem

./: .gitignore  LICENSE  README.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FEATURES.md  MASTER_SPEC.md  PRODUCT_MAP.md  STEERING.md  TRACEABILITY.md
docs/features/F-001-workspace-file-system/: design.md  requirements.md  tasks.md  verification.md
docs/features/F-002-commit-command/: design.md  requirements.md  tasks.md  verification.md
docs/features/F-003-branch-command/: design.md  requirements.md  tasks.md  verification.md
docs/features/F-004-merge-command/: design.md  requirements.md  tasks.md  verification.md
docs/features/F-005-context-command/: design.md  requirements.md  tasks.md  verification.md
docs/features/F-006-mcp-server/: design.md  requirements.md  tasks.md  verification.md
src/gitmem/: __init__.py  errors.py  llm.py  models.py  prompts.py  templates.py  workspace.py
src/gitmem/commands/: branch.py  commit.py  context.py  merge.py
src/gitmem_mcp/: server.py
tests/: MANUAL_TEST_PLAN.md  test_branch.py  test_commit.py  test_context.py  test_integration.py  test_mcp_protocol.py  test_mcp_server.py  test_merge.py  test_workspace.py
