[project]
name = "gitmem"
version = "0.1.0"
description = "Version-controlled memory system for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Braden Stitt", email = "stittbraden@gmail.com" }]
keywords = ["llm", "ai", "memory", "agents", "mcp", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/BradenStitt/gitmem"
Repository = "https://github.com/BradenStitt/gitmem"
Issues = "https://github.com/BradenStitt/gitmem/issues"

[project.scripts]
gitmem-mcp = "gitmem_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitmem", "src/gitmem_mcp"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
